# linregmc

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
doc/: changelog.html  conduct.html  example.html  genindex.html  objects.inv  searchindex.js
doc/_modules/: index.html
doc/_modules/linregmc/: linregmc.html
doc/_sources/autoapi/: index.rst.txt
doc/autoapi/linregmc/: index.html
docs/: Makefile  conf.py  example.ipynb  index.md  linregmc  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/linregmc/: index.doctree
docs/_build/html/: .buildinfo  contributing.html  index.html  py-modindex.html  search.html
docs/_build/html/_sources/autoapi/linregmc/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/jupyter_execute/: example.ipynb
tests/: test_linregmc.py
