[tool.poetry]
name = "linregmc"
version = "0.1.1"
description = "Linear regression with Monte Carlo error analysis"
authors = ["Pär Söderhjelm"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.0"
sphinx-rt